--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-size: 100% 100%;
   font-family: "DotGothic16", sans-serif;
   overflow: hidden;
+  z-index: 1;
 }
 body::selection {
   color: red;
@@ -21,7 +22,6 @@ body::selection {
 }
 
 .title {
-  margin: 0rem 0 3rem 0;
   font-size: 45px;
   text-shadow: 2px 2px #ff0000;
   color: rgb(0, 0, 0);
@@ -32,16 +32,32 @@ body::selection {
   background-color: black;
 }
 
+.text-area {
+  margin: 3rem 0 0 0;
+  background-color: black;
+  width: 105%;
+  height: 33rem;
+  transform: skewY(-6deg);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #text-here {
-  height: 30rem;
+  height: 23rem;
   width: 60rem;
   font-size: 40px;
-  margin-bottom: 3rem;
   /* background-image: url("fire.png"); */
   background-color: rgb(0, 0, 0);
   background-size: 100% 100%;
   color: white;
   font-family: "DotGothic16", sans-serif;
+  resize: none;
+  outline-style: none;
+  border: none;
+  transform: skewY(6deg);
+  z-index: 999;
 }
 
 #text-here::placeholder {
@@ -52,6 +68,7 @@ body::selection {
 }
 
 .buttons {
+  margin-top: 5rem;
   display: flex;
   justify-content: space-between;
   width: 60rem;
@@ -83,4 +100,10 @@ body::selection {
 .button-down:active {
   position: relative;
   bottom: 2px;
+}
+
+#gif {
+  position: fixed;
+  top: 40%;
+  left: 75%;
 }
